--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" id="gd-code-glorify">
+<html lang="en" id="gd-code-glory">
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="/code-glorify/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/code-glorify/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/code-glorify/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/code-glorify/manifest.json">
-    <link rel="mask-icon" href="/code-glorify/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/code-glorify/favicon.ico">
-    <meta name="apple-mobile-web-app-title" content="Code Glorify">
-    <meta name="application-name" content="Code Glorify">
-    <meta name="msapplication-config" content="/code-glorify/browserconfig.xml">
+    <link rel="apple-touch-icon" sizes="180x180" href="/code-glory/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/code-glory/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/code-glory/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/code-glory/manifest.json">
+    <link rel="mask-icon" href="/code-glory/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/code-glory/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Code Glory">
+    <meta name="application-name" content="Code Glory">
+    <meta name="msapplication-config" content="/code-glory/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
@@ -27,7 +27,7 @@
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <title>Code Glorify</title>
+    <title>Code Glory</title>
 </head>
 
 <body id="custom">
