--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="gd-code-glory">
+<html lang="en" id="gd-code-glory" class="gd-glory">
 
 <head>
     <meta charset="utf-8">
