Improved centering and cross-resolution compatibility.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <link href='//fonts.googleapis.com/css?family=Source+Code+Pro&effect=3d|3d-float|anaglyph|brick-sign|canvas-print|
+    crackle|decaying|destruction|distressed|distressed-wood|emboss|fire|fire-animation|fragile|grass|ice|mitosis|neon|outline|putting-green|
+    scuffed-steel|shadow-multiple|splintered|static|stonewash|vintage|wallpaper' 
+    rel='stylesheet' type='text/css'>
+
     <title>Code Glory</title>
 </head>
 
