Unused files removed, updated examples.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="apple-touch-icon" sizes="180x180" href="/code-glory/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/code-glory/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/code-glory/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/code-glory/manifest.json">
-    <link rel="mask-icon" href="/code-glory/safari-pinned-tab.svg" color="#5bbad5">
-    <link rel="shortcut icon" href="/code-glory/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Code Glory">
     <meta name="application-name" content="Code Glory">
-    <meta name="msapplication-config" content="/code-glory/browserconfig.xml">
+    <meta name="msapplication-config" content="browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
