Updated with R3V1Z3 name change.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.5.0/highlight.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/interact.js/1.2.9/interact.min.js"></script>
 
-    <script src="//ugotsta.github.io/breakdown/js/breakdown.js"></script>
+    <script src="//R3V1Z3.github.io/breakdown/js/breakdown.js"></script>
     <script src="js/script.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="//ugotsta.github.io/breakdown/css/style.css">
+    <link rel="stylesheet" type="text/css" href="//R3V1Z3.github.io/breakdown/css/style.css">
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
